[gd_scene load_steps=8 format=3 uid="uid://curjxjq3rmyv7"]

[ext_resource type="Script" uid="uid://bd7y1xr1l48bk" path="res://dungeon_generator/rock.gd" id="1_x3628"]
[ext_resource type="Script" uid="uid://bvpsio45nj0r7" path="res://states/state_machine.gd" id="2_1vhae"]
[ext_resource type="PackedScene" uid="uid://7wtngh11pph" path="res://UI_layers/floating_text.tscn" id="2_8hl8r"]
[ext_resource type="Script" uid="uid://dyfo0vatkdm0a" path="res://custom_resources/state_resources/rock_idle.gd" id="3_4k4v5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6g0r5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x3628"]
radius = 20.025

[sub_resource type="Resource" id="Resource_8hl8r"]
script = ExtResource("3_4k4v5")
metadata/_custom_type_script = "uid://dyfo0vatkdm0a"

[node name="Rock" type="CharacterBody2D" groups=["Rock"]]
texture_filter = 1
script = ExtResource("1_x3628")
damage_label = ExtResource("2_8hl8r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6g0r5")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="rock_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rock_range"]
shape = SubResource("CircleShape2D_x3628")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -18)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_1vhae")
default_state = SubResource("Resource_8hl8r")
actor = NodePath("..")

[connection signal="area_entered" from="rock_range" to="." method="_on_rock_range_entered"]
[connection signal="area_exited" from="rock_range" to="." method="_on_rock_range_exited"]
